--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "mongoose": "^7.0.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.2",
+    "stripe": "^11.15.0"
   }
 }
