--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.2",
-    "stripe": "^11.15.0"
+    "stripe": "^11.15.0",
+    "xlsx": "^0.18.5"
   }
 }
