--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
     "nodemon": "^2.0.21"
   },
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.2",
+    "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "stripe": "^11.15.0",
     "xlsx": "^0.18.5"
   }
