--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "selenium": "^2.20.0",
+    "selenium-webdriver": "^4.8.2",
     "stripe": "^11.15.0",
     "xlsx": "^0.18.5"
   }
