--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "nodemon": "^2.0.21"
   },
   "dependencies": {
+    "@undecaf/zbar-wasm": "^0.9.12",
+    "canvas": "^2.11.2",
+    "certificate-signer-library": "^2.0.5",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
@@ -29,14 +32,27 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.7",
+    "install": "^0.13.0",
+    "jimp": "^0.22.7",
+    "jpeg-js": "^0.4.4",
+    "jsqr": "^1.4.0",
+    "jszip": "^3.10.1",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "npm": "^9.6.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "png-js": "^1.0.0",
+    "pngjs": "^7.0.0",
+    "puppeteer": "^19.8.2",
+    "qrcode": "^1.5.1",
+    "qrcode-reader": "^1.0.4",
     "selenium": "^2.20.0",
     "selenium-webdriver": "^4.8.2",
     "stripe": "^11.17.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zbar.wasm": "^2.1.1"
   }
 }
