--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
+    "html-pdf": "^3.0.1",
     "install": "^0.13.0",
     "jimp": "^0.22.7",
     "jpeg-js": "^0.4.4",
