--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@undecaf/zbar-wasm": "^0.9.12",
+    "axios": "^1.3.5",
     "canvas": "^2.11.2",
     "certificate-signer-library": "^2.0.5",
     "connect-ensure-login": "^0.1.1",
